# jacdac-stm32x0

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.mk  cmp.sh  jacdac-c  jacdac-v1-spec.md  light.md  package-lock.json  package.json  power.md  stm32f0.mk
bl/: bl.c  bl.h  bljd.c  blled.c  blmain.c  blproto.c  blproto.h  blpwm.c  bltim.c  bluart.c  blutil.h  blutils.c  boothandler.s  jd.c  tim.c  uart.c
blup/: blup.h  blupmain.c
jd/: acc.c  ctrl.c  gamepad.c  host.c  humidity.c  jdapp.c  jdconsole.c  jdprofile.h  jdsimple.h  light.c  main.c  motor.c  power.c  services.h  snd.c  temp.c  txq.c
jdspy/: Makefile  hf2.ts  jd.ts  jdbl.ts  jdpretty.ts  main.ts  package.json  pxtutils.ts  tsconfig.json
ld/: STM32F031x6-bl.ld  STM32F031x6.ld  gcc_arm.ld  gcc_arm_bl_at_end.ld
lib/: alloc.c  blhw.c  blhw.h  bridge.c  dmesg.c  dmesg.h  hw.h  jd_user_config.h  kxtj3.c  lib.h  namestore.c  pwr.c  qma7981.c  ssd1306.c  th02.c  tinyhw.h  utils.c
rejected/: async_flash_erase.patch  bl-no-pll.patch  irq_disabled_trace.patch  services-static-ctx.patch  settings.c
scripts/: bin2c.js  bin2uf2.js  bindiff.sh  bump.sh  check-fw-id.js  cmpbits.js  compress.ts  disasm.sh  git-sublog.js  map-file-stats.js  mk-jdpk.js  openocd  patch-bin.js  resistor-capacitor-id-values.js  stm32f0x.cfg  stm32g0x.cfg  tsconfig.json
services/: acc.c  btn.c  crank.c  frame.c  gamepad.c  humidity.c  jdapp.c  jdprofile.h  light.c  main.c  motor.c  oled.c  power.c  pwm_light.c  sensor.c  servo.c  slider.c  snd.c  temp.c  touch.c
spibridge/: Makefile  README.md  pibridge  pibridge-gpiod.c  pibridge-wiringpi.c  pibridge.c  run.sh
src/: acc.c  adc.c  alloc.c  blhw.c  blhw.h  bridge.c  bridgespi.c  btn.c  crank.c  ctrl.c  dmesg.c  dmesg.h  exti.c  host.c  host.h  init.c  jd_user_config.h  jdapp.c  jdapp_bl.c  jdprofile.h  jdsimple.h  kv.c  lib.h  light.c  main.c  namestore.c  pinnames.h  pins.c  pwm_light.c  pwr.c  qma7981.c  queue.c  sensor.c  services.h  servo.c  settings.c  ssd1306.c  stm32g0.h  tim.c  tinyhw.h  (+3 more)
stm32/: adc.c  bitbang_spi.c  display.c  dspi.c  duart.c  exti.c  flash.c  hwconfig.h  i2c.c  init.c  jdstm.h  lib.h  onewire.c  pinnames.h  pins.c  pwm.c  pwr.c  rtc.c  spidef.h  spis.c  sspi.c  stm32_assert.h  stm32f0.h  stm32f0.mk  stm32g0.h  stm32l4.h  (+7 more)
(+111 files in other folders)
